--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -28,7 +28,7 @@ jobs:
         with:
            templateFile: 'AMI.json'
            workingDir: '.'
-           varFile: 'packer-vars.json'
+           varFile: 'packers-vars.json'
         env:
            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_ROOT }}
            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT }}
