--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Packer init
+        uses: riznob/packer-build-action@v1.5
       
       - uses: actions/checkout@v3
       
