--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -29,7 +29,7 @@ jobs:
       - name: executing remote ssh commands using ssh key
         uses: ./
         with:
-          key: ${{ secrets.KEY }}
+          key: ${{ secrets.SSH_KEY }}
           script: whoami
 
       - uses: actions/checkout@v3
