--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -24,10 +24,8 @@ jobs:
       
      
    
-      
-      - uses: actions/checkout@v3
       - name: executing remote ssh commands using ssh key
-        uses: ./
+        uses: actions/checkout@v3
         with:
           key: ${{ secrets.SSH_KEY }}
 
