--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -22,12 +22,12 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       
-     
-   
-      - name: executing remote ssh commands using ssh key
-        uses: actions/checkout@v3
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.SSH_KEY }}
+          key: ${{ secrets.SSH_KEY }} 
+          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+ 
 
       - uses: actions/checkout@v3
       - name: Packer build -debug
