change uses to harshicop

--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -28,10 +28,15 @@ jobs:
           key: ${{ secrets.SSH_KEY }} 
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
  
+      - name: Init
+        uses: hashicorp/packer-github-actions@master
+        with:
+          working_directory: '.'
+          command: init
 
       - uses: actions/checkout@v3
       - name: Packer build -debug
-        uses: ExitoLab/packer_build_action_aws@v0.2.10
+        uses: hashicorp/packer-github-actions@master
         with:
            templateFile: 'AMI.json'
            workingDir: '.'
