--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -22,6 +22,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
 
+      
+      - name: Run a multi-line script
+        run: |
+          ssh-keygen -t ed25519 -a 100 -f path/to/keyfile
+          ls -R
+          
+ 
 
       - uses: actions/checkout@v3
       - name: Packer build -debug
