--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -33,6 +33,7 @@ jobs:
         with:
            aws-access-key-id:  ${{secrets.AWS_ACCESS_KEY_ID_ROOT}}
            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT }}
+           aws-region: 'us-east-1'
           
 
       - uses: actions/checkout@v3
