--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -35,16 +35,33 @@ jobs:
            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT }}
            aws-region: 'us-east-1'
           
-
-      - uses: actions/checkout@v3
-      - name: Packer build -debug
-        uses: riznob/packer-build-action@v1.5
+      - name: Initialize Packer Template
+        uses: hashicorp/packer-github-actions@master
         with:
-           templateFile: 'AMI.json'
-           workingDir: '.'
-           varFile: 'packers-vars.json'
+          command: init
+      
+      # build artifact
+      - name: Build Artifact
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: build
+          arguments: "-color=false -on-error=abort"
+          target: AMI.json
         env:
-           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_ROOT }}
-           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT }}
-           SSH_KEY: ${{ secrets.SSH_KEY }}
-           PACKER_LOG: 1
+          PACKER_LOG: 1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_ROOT }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT }}
+          SSH_KEY: ${{ secrets.SSH_KEY }}
+
+     # - uses: actions/checkout@v3
+     # - name: Packer build -debug
+     #   uses: riznob/packer-build-action@v1.5
+     #   with:
+      #     templateFile: 'AMI.json'
+      #     workingDir: '.'
+       #    varFile: 'packers-vars.json'
+       # env:
+       #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_ROOT }}
+        #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT }}
+      #    SSH_KEY: ${{ secrets.SSH_KEY }}
+        #   PACKER_LOG: 1
