--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -40,6 +40,14 @@ jobs:
         with:
           command: init
       
+      # validate templates
+      - name: Validate Template
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: validate
+          arguments: -syntax-only
+          target: AMI.json
+      
       # build artifact
       - name: Build Artifact
         uses: hashicorp/packer-github-actions@master
