--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -39,6 +39,7 @@ jobs:
         uses: hashicorp/packer-github-actions@master
         with:
           command: init
+          target: AMI.json
       
       # validate templates
       - name: Validate Template
