--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -34,17 +34,28 @@ jobs:
            aws-access-key-id:  ${{secrets.AWS_ACCESS_KEY_ID_ROOT}}
            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT }}
            aws-region: 'us-east-1'
-          
-
-      - uses: actions/checkout@v3
-      - name: Packer build -debug
-        uses: riznob/packer-build-action@v1.5
+           
+      - name: Packer build
+        uses: ExitoLab/packer_build_action_aws@v0.2.10
         with:
-           templateFile: 'AMI.json'
-           workingDir: '.'
-           varFile: 'packers-vars.json'
+          templateFile: 'AMI.json'
+          workingDir: '.'
         env:
            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_ROOT }}
            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT }}
            SSH_KEY: ${{ secrets.SSH_KEY }}
            PACKER_LOG: 1
+          
+
+#       - uses: actions/checkout@v3
+#       - name: Packer build -debug
+#         uses: riznob/packer-build-action@v1.5
+#         with:
+#            templateFile: 'AMI.json'
+#            workingDir: '.'
+#            varFile: 'packers-vars.json'
+#         env:
+#            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_ROOT }}
+#            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT }}
+#            SSH_KEY: ${{ secrets.SSH_KEY }}
+#            PACKER_LOG: 1
