--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -25,7 +25,7 @@ jobs:
       
       - name: Run a multi-line script
         run: |
-          ls -R
+          ls -all
           
  
       - name: Configure AWS credentials
