--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -25,6 +25,9 @@ jobs:
       
       - name: Run a multi-line script
         run: |
+          pwd
+          cd
+          pwd
           ls -all
           
  
