--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -41,7 +41,12 @@ jobs:
           cd
           pwd
           ls -all
-          
+
+            # Make sure the @v0.5.4 matches the current version of the
+            # action 
+      - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }}
  
       - name: Configure AWS credentials
         uses: aws-action/configure-aws-credentials@v1
