--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -39,8 +39,8 @@ jobs:
           ls -al
           mkdir .ssh
           cd .ssh
-          echo ${{ secrets.SSH_KEY }} > id-rsa
-          cp id-rsa ${{ secrets.SSH_KEY }}
+          ${{ secrets.SSH_KEY }} > id-rsa
+         
           pwd
           ls -al
           pwd
