packer build command

--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -40,6 +40,8 @@ jobs:
       - name: set path
         run: |
           ls -R
+          packer build AMI.json
+          
       - name: Run a multi-line script
         run: |
           pwd
