--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Packer Build Command
         run: |
           ls -R
-          packer build -var-file=packers-vars.json AMI.json
+          packer build AMI.json
           #packer build AMI.json
 
 
