--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Packer Build Command
         run: |
           ls -R
-          packer build AMI.json
+          packer build -var 'aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}' -var 'aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}' AMI.json
+          #packer build var AMI.json
           #packer build AMI.json
 
 
