--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Packer Build Command
         run: |
           ls -R
-          packer build -var 'aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}' -var 'aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}' AMI.json
+          packer build -var 'aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_ROOT }}' -var 'aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT }}' AMI.json
           #packer build var AMI.json
           #packer build AMI.json
 
