--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Packer Build Command
         run: |
           ls -R
-          packer build -var 'aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_ROOT }}' -var 'aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT }}' AMI.json
+          packer build -var 'aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_ROOT_KETKI }}' -var 'aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY_ROOT_KETKI }}' AMI.json
       
 
       
