--- a/.github/workflows/onPull.yml
+++ b/.github/workflows/onPull.yml
@@ -22,13 +22,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+          
+      - name: Packer Validate Command
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          ls -R
+          packer validate --syntax-only AMI.json
+      
+
