--- a/.github/workflows/BuildAMI.yml
+++ b/.github/workflows/BuildAMI.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Packer Build Command
         run: |
           ls -R
-          packer build -var 'aws_access_key=${{ secrets.AWS_ACCESS_KEY_DEV_KETKI }}' -var 'aws_secret_key=${{ secrets.AWS_SECRET_KEY_DEV_KETKI }}' AMI.json
+          packer build -var 'aws_access_key=${{ secrets.AWS_ACCESS_KEY_ROOT }}' -var 'aws_secret_key=${{ secrets.AWS_SECRET_KEY_ROOT }}' AMI.json
       
 
       
